--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,14 @@
 language: node_js
 
 node_js:
-- "10"
-
-cache: yarn
+- "13"
 
 install:
-- yarn install
+- npm install
 
 script:
-- yarn test
-- yarn build
+- npm run test
+- npm run build
 
 deploy:
   provider: firebase
